Html to Pdf Converter (initial commit)

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -133,6 +133,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="NReco.PdfGenerator">
+      <HintPath>..\..\packages\NReco.PdfGenerator.1.1.2.0\lib\net20\NReco.PdfGenerator.dll</HintPath>
+    </Reference>
     <Reference Include="Recaptcha">
       <HintPath>..\..\packages\recaptcha.1.0.5.0\lib\.NetFramework 4.0\Recaptcha.dll</HintPath>
     </Reference>
@@ -247,6 +250,12 @@
     <Compile Include="Extensions\RouteExtensions.cs" />
     <Compile Include="Mvc\ModelBoundEvent.cs" />
     <Compile Include="Mvc\ProviderModel.cs" />
+    <Compile Include="Pdf\UrlAsPdfResult.cs" />
+    <Compile Include="Pdf\RouteAsPdfResult.cs" />
+    <Compile Include="Pdf\ActionAsPdfResult.cs" />
+    <Compile Include="Pdf\PdfResultBase.cs" />
+    <Compile Include="Pdf\PartialViewAsPdfResult.cs" />
+    <Compile Include="Pdf\ViewAsPdfResult.cs" />
     <Compile Include="Plugins\PluginMediator.cs" />
     <Compile Include="Plugins\ProviderManager.cs" />
     <Compile Include="Seo\CanonicalHostNameAttribute.cs" />
