(Perf) Refactored view engine: uses localized DisplayModes now for mobile & dektop

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -260,8 +260,10 @@
     <Compile Include="Plugins\ProviderManager.cs" />
     <Compile Include="Seo\CanonicalHostNameAttribute.cs" />
     <Compile Include="SmartUrlRoutingModule.cs" />
+    <Compile Include="Themes\LocalizedDisplayMode.cs" />
     <Compile Include="Themes\ThemeFileResolver.cs" />
     <Compile Include="Themes\InheritedVirtualThemeFile.cs" />
+    <Compile Include="Themes\TwoLevelViewLocationCache.cs" />
     <Compile Include="UI\Components\Menu\AdminMenuProvider.cs" />
     <Compile Include="UI\Components\Menu\MenuPublisher.cs" />
     <Compile Include="UI\HtmlAttribute.cs" />
