--- a/src/Libraries/SmartStore.Services/packages.config
+++ b/src/Libraries/SmartStore.Services/packages.config
@@ -13,5 +13,6 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
+  <package id="NReco.PdfGenerator" version="1.1.2.0" targetFramework="net45" />
   <package id="System.Linq.Dynamic" version="1.0.0" targetFramework="net45" />
 </packages>
