--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -1925,7 +1925,6 @@
     <Content Include="Themes\Mobile\Content\jquery.mobile.theme-1.3.2.min.css" />
     <Content Include="Themes\Mobile\Content\styles.css" />
     <Content Include="Themes\Mobile\preview.png" />
-    <Content Include="Themes\print.css" />
     <Content Include="Views\Product\BackInStockSubscribePopup.Mobile.cshtml" />
     <Content Include="Views\Catalog\CategoryNavigation.Mobile.cshtml" />
     <Content Include="Views\Catalog\CategoryTemplate.ProductsInGridOrLines.Mobile.cshtml" />
@@ -2168,6 +2167,10 @@
     <Content Include="Themes\Alpha\Content\skin.less" />
     <Content Include="Themes\Alpha\Content\typo.less" />
     <Content Include="Themes\AlphaBlack\Content\custom.less" />
+    <Content Include="Views\Shared\_Print2.cshtml" />
+    <Content Include="Views\Order\Details.Print.cshtml" />
+    <Content Include="Views\Order\Details.Print.Header.cshtml" />
+    <Content Include="Views\Order\Details.Print.Footer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Scripts\select2\" />
