Multistore configuration for offline payment provider

--- a/src/Plugins/SmartStore.OfflinePayment/SmartStore.OfflinePayment.csproj
+++ b/src/Plugins/SmartStore.OfflinePayment/SmartStore.OfflinePayment.csproj
@@ -183,6 +183,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="changelog.md">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
     <Content Include="web.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
