Html to Pdf converter (6)

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -247,7 +247,10 @@
     <Compile Include="Extensions\RouteExtensions.cs" />
     <Compile Include="Mvc\ModelBoundEvent.cs" />
     <Compile Include="Mvc\ProviderModel.cs" />
-    <Compile Include="Pdf\RepeatablePdfSection.cs" />
+    <Compile Include="Pdf\PdfHeaderFooter.cs" />
+    <Compile Include="Pdf\PdfReceiptHeaderFooterModel.cs" />
+    <Compile Include="Pdf\PdfHeaderFooterVariables.cs" />
+    <Compile Include="Pdf\SimplePdfHeaderFooter.cs" />
     <Compile Include="Pdf\UrlAsPdfResult.cs" />
     <Compile Include="Pdf\RouteAsPdfResult.cs" />
     <Compile Include="Pdf\ActionAsPdfResult.cs" />
