--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -374,7 +374,7 @@
     <Compile Include="Payments\PaymentService.cs" />
     <Compile Include="Payments\ProcessPaymentResult.cs" />
     <Compile Include="Payments\RecurringPaymentType.cs" />
-    <Compile Include="Pdf\IRepeatablePdfSection.cs" />
+    <Compile Include="Pdf\IPdfHeaderFooter.cs" />
     <Compile Include="Pdf\PdfConvertOptions.cs" />
     <Compile Include="Pdf\PdfPageMargins.cs" />
     <Compile Include="Pdf\PdfPageSize.cs" />
