--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -76,6 +76,7 @@
     <!-- set this to "true", if the view engine should also try to resolve view files ending with {CurrentLanguage} (e.g.: MyView.de.cshtml > MyView.cshtml)  -->
     <add key="sm:EnableLocalizedViews" value="false" />
     <add key="sm:ShowCustomErrors" value="true" />
+    <add key="sm:EnableLegacyRoutesMapping" value="true" />
     <add key="sm:ClearPluginsShadowDirectoryOnStartup" value="false" />
     <add key="sm:TempDirectory" value="~/App_Data/_temp" />
     <add key="sm:BizImportMediaDirectory" value="~/Media/Uploaded/static" />
@@ -171,10 +172,6 @@
         </hiddenSegments>
       </requestFiltering>
     </security>
-    <rewrite>
-      <rules configSource="Config\RewriteRules.config" />
-      <rewriteMaps configSource="Config\RewriteMaps.config" />
-    </rewrite>
   </system.webServer>
   <system.serviceModel>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
