Several fixes to pdf converter

--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -470,6 +470,7 @@
     <Content Include="Views\Home\MarketplaceFeed.cshtml" />
     <Content Include="Views\Order\ShipmentDetails.Print.cshtml" />
     <Content Include="Views\Product\PdfCatalog.Print.cshtml" />
+    <Content Include="Views\Product\PdfCatalog.Print.Footer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\admin.less" />
