PDF templates: packaging slip & product catalog (work in progress)

--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -471,6 +471,7 @@
     <Content Include="Views\Order\ShipmentDetails.Print.cshtml" />
     <Content Include="Views\Product\PdfCatalog.Print.cshtml" />
     <Content Include="Views\Product\PdfCatalog.Print.Footer.cshtml" />
+    <Content Include="Views\Product\PdfCatalog.Print.Cover.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\admin.less" />
