--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -207,6 +207,10 @@
     <Compile Include="Migrations\201412081934318_V211.Designer.cs">
       <DependentUpon>201412081934318_V211.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201501191849483_WidgetWrapContent.cs" />
+    <Compile Include="Migrations\201501191849483_WidgetWrapContent.Designer.cs">
+      <DependentUpon>201501191849483_WidgetWrapContent.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -416,6 +420,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201412081934318_V211.resx">
       <DependentUpon>201412081934318_V211.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201501191849483_WidgetWrapContent.resx">
+      <DependentUpon>201501191849483_WidgetWrapContent.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
