--- a/src/Tests/SmartStore.Data.Tests/SmartStore.Data.Tests.csproj
+++ b/src/Tests/SmartStore.Data.Tests/SmartStore.Data.Tests.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Catalog\CategoryPersistenceTests.cs" />
     <Compile Include="Common\GenericAttributePersistenceTests.cs" />
     <Compile Include="Customers\ExternalAuthenticationRecordPersistenceTests.cs" />
+    <Compile Include="GlobalSetup.cs" />
     <Compile Include="Orders\CheckoutAttributePersistenceTests.cs" />
     <Compile Include="Orders\CheckoutAttributeValuePersistenceTests.cs" />
     <Compile Include="Affiliates\AffiliatePersistenceTests.cs" />
