--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -211,6 +211,10 @@
     <Compile Include="Migrations\201501191849483_WidgetWrapContent.Designer.cs">
       <DependentUpon>201501191849483_WidgetWrapContent.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201501221417371_DefaultViewModeForCategories.cs" />
+    <Compile Include="Migrations\201501221417371_DefaultViewModeForCategories.Designer.cs">
+      <DependentUpon>201501221417371_DefaultViewModeForCategories.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -423,6 +427,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201501191849483_WidgetWrapContent.resx">
       <DependentUpon>201501191849483_WidgetWrapContent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201501221417371_DefaultViewModeForCategories.resx">
+      <DependentUpon>201501221417371_DefaultViewModeForCategories.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
