--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -115,6 +115,7 @@
     <Compile Include="..\..\AssemblyVersionInfo.cs">
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
+    <Compile Include="Mapping\Directory\QuantityUnitMap.cs" />
     <Compile Include="Migrations\201403112331027_Initial.cs" />
     <Compile Include="Migrations\201403112331027_Initial.Designer.cs">
       <DependentUpon>201403112331027_Initial.cs</DependentUpon>
@@ -214,6 +215,9 @@
     <Compile Include="Migrations\201501221417371_DefaultViewModeForCategories.cs" />
     <Compile Include="Migrations\201501221417371_DefaultViewModeForCategories.Designer.cs">
       <DependentUpon>201501221417371_DefaultViewModeForCategories.cs</DependentUpon>
+    </Compile>    <Compile Include="Migrations\201501291135374_QuantityUnits.cs" />
+    <Compile Include="Migrations\201501291135374_QuantityUnits.Designer.cs">
+      <DependentUpon>201501291135374_QuantityUnits.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\201501291549546_OrderItemTaxRate.cs" />
     <Compile Include="Migrations\201501291549546_OrderItemTaxRate.Designer.cs">
@@ -434,9 +438,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201501221417371_DefaultViewModeForCategories.resx">
       <DependentUpon>201501221417371_DefaultViewModeForCategories.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201501291549546_OrderItemTaxRate.resx">
+    </EmbeddedResource>    <EmbeddedResource Include="Migrations\201501291549546_OrderItemTaxRate.resx">
       <DependentUpon>201501291549546_OrderItemTaxRate.cs</DependentUpon>
+    </EmbeddedResource>    <EmbeddedResource Include="Migrations\201501291135374_QuantityUnits.resx">
+      <DependentUpon>201501291135374_QuantityUnits.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
