--- a/.gitignore
+++ b/.gitignore
@@ -202,6 +202,7 @@ Kopie von*
 /src/Presentation/SmartStore.Web/App_Data/_temp/
 /src/Presentation/SmartStore.Web/App_Data/Settings.txt
 /src/Presentation/SmartStore.Web/App_Data/InstalledPlugins.txt
+/src/Presentation/SmartStore.Web/App_Data/Licensing.key
 /src/Presentation/SmartStore.Web/Media
 
 # Import/Export
