Minor refactoring for previous pull request from muammetsahin (FilterMaxItems & FilterExpandAll)

--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -215,7 +215,8 @@
     <Compile Include="Migrations\201501221417371_DefaultViewModeForCategories.cs" />
     <Compile Include="Migrations\201501221417371_DefaultViewModeForCategories.Designer.cs">
       <DependentUpon>201501221417371_DefaultViewModeForCategories.cs</DependentUpon>
-    </Compile>    <Compile Include="Migrations\201501291135374_QuantityUnits.cs" />
+    </Compile>
+    <Compile Include="Migrations\201501291135374_QuantityUnits.cs" />
     <Compile Include="Migrations\201501291135374_QuantityUnits.Designer.cs">
       <DependentUpon>201501291135374_QuantityUnits.cs</DependentUpon>
     </Compile>
@@ -438,9 +439,11 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201501221417371_DefaultViewModeForCategories.resx">
       <DependentUpon>201501221417371_DefaultViewModeForCategories.cs</DependentUpon>
-    </EmbeddedResource>    <EmbeddedResource Include="Migrations\201501291549546_OrderItemTaxRate.resx">
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201501291549546_OrderItemTaxRate.resx">
       <DependentUpon>201501291549546_OrderItemTaxRate.cs</DependentUpon>
-    </EmbeddedResource>    <EmbeddedResource Include="Migrations\201501291135374_QuantityUnits.resx">
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201501291135374_QuantityUnits.resx">
       <DependentUpon>201501291135374_QuantityUnits.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
