--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -386,8 +386,9 @@
     <Compile Include="Pdf\PdfPageSize.cs" />
     <Compile Include="Pdf\PdfPagePrientation.cs" />
     <Compile Include="Pdf\WkHtmlToPdfConverter.cs" />
-    <Compile Include="Plugins\ILicenseService.cs" />
-    <Compile Include="Plugins\LicenseService.cs" />
+    <Compile Include="Plugins\ILicenseStorageService.cs" />
+    <Compile Include="Plugins\LicenseCheckerHelper.cs" />
+    <Compile Include="Plugins\LicenseStorageService.cs" />
     <Compile Include="Polls\IPollService.cs" />
     <Compile Include="Polls\PollService.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
