--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -104,9 +104,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\NReco.PdfGenerator.1.1.3.0\lib\net20\NReco.PdfGenerator.dll</HintPath>
     </Reference>
-    <Reference Include="SmartStore.Licensing">
-      <HintPath>..\..\Presentation\SmartStore.Web\bin\SmartStore.Licensing.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -387,9 +384,6 @@
     <Compile Include="Pdf\PdfPageSize.cs" />
     <Compile Include="Pdf\PdfPagePrientation.cs" />
     <Compile Include="Pdf\WkHtmlToPdfConverter.cs" />
-    <Compile Include="Plugins\ILicenseStorageService.cs" />
-    <Compile Include="Plugins\LicenseCheckerHelper.cs" />
-    <Compile Include="Plugins\LicenseStorageService.cs" />
     <Compile Include="Polls\IPollService.cs" />
     <Compile Include="Polls\PollService.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -527,7 +521,8 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <PropertyGroup>
-    <PreBuildEvent>xcopy /D /y /s /r "$(SolutionDir)..\lib\SmartStore.Licensing\*.*" "$(SolutionDir)Presentation\SmartStore.Web\bin\"</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
